tests/ui/inference/char-as-str-single.stderr
error[E0308]: mismatched types
  --> $DIR/char-as-str-single.rs:9:19
   |
LL |     let _: char = "a";
   |            ----   ^^^ expected `char`, found `&str`
   |            |
   |            expected due to this
   |
help: if you meant to write a `char` literal, use single quotes
   |
LL |     let _: char = 'a';
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/char-as-str-single.rs:10:19
   |
LL |     let _: char = "人";
   |            ----   ^^^^ expected `char`, found `&str`
   |            |
   |            expected due to this
   |
help: if you meant to write a `char` literal, use single quotes
   |
LL |     let _: char = '人';
   |                   ~~~~

error[E0308]: mismatched types
  --> $DIR/char-as-str-single.rs:11:19
   |
LL |     let _: char = "'";
   |            ----   ^^^ expected `char`, found `&str`
   |            |
   |            expected due to this
   |
help: if you meant to write a `char` literal, use single quotes
   |
LL |     let _: char = '\'';
   |                   ~~~~

error[E0308]: mismatched types
  --> $DIR/char-as-str-single.rs:18:9
   |
LL |     match c {
   |           - this expression has type `char`
LL |         "A" => {}
   |         ^^^ expected `char`, found `&str`
   |
help: if you meant to write a `char` literal, use single quotes
   |
LL |         'A' => {}
   |         ~~~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
